Increase folder depth options from 3 to 8 and fix header folder location being truncated

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -164,6 +164,7 @@ body {
   font-size: 48px;
   font-style: italic;
   transform: translate(0px, 5px);
+  width: inherit;
 }
 .mainApp {
   display: flex;
